# plainpaper_back

./: .env  README.md  database.py  main.py  pyproject.toml
models/: ai_model_version.py  analysis_metric.py  analysis_result.py  document.py  email_verification.py  feedback.py  file_queue.py  keyword_highlight.py  member.py
routers/: auth.py  login.py  register.py
utils/: email.py  jwt.py
