[project]
name = "plainpaper-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.72.0",
    "fastapi>=0.121.1",
    "openai>=2.7.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
